chore(orga): fix table alignment on sco organization participant

--- a/orga/app/styles/pages/authenticated/sco-organization-participants/list.scss
+++ b/orga/app/styles/pages/authenticated/sco-organization-participants/list.scss
@@ -7,7 +7,7 @@
   }
 
   &__certificability-header {
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
   }
 }
